--- a/css/main.css
+++ b/css/main.css
@@ -48,29 +48,36 @@ body {
   align-items: center; }
 
 .backdrop {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: -100%;
   left: 0;
+  opacity: 0;
   background-color: rgba(0, 0, 0, 0.849);
   z-index: 10;
-  transition: top 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  transition: all 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center; }
   .backdrop_transparent {
-    width: 60%;
+    width: 70%;
     height: 20rem;
-    color: white; }
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end; }
     .backdrop_transparent p {
-      font-size: calc(.4rem + 1vw);
+      font-size: calc(.3rem + .8vw);
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
       margin: 1rem; }
+      .backdrop_transparent p:hover, .backdrop_transparent p:active {
+        cursor: pointer; }
     .backdrop_transparent span {
       font-size: calc(.6rem + 1.3vw);
       font-weight: bold;
@@ -81,10 +88,45 @@ body {
     height: 60%;
     background-color: white;
     border-radius: 8px;
-    box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.75); }
+    box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.75);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start; }
+    .backdrop_add_category h2 {
+      font-size: calc(.4rem + 1vw);
+      font-weight: 600;
+      color: gray;
+      margin: 2rem 2rem;
+      text-transform: uppercase; }
+    .backdrop_add_category_input_container {
+      width: 100%;
+      position: relative; }
+      .backdrop_add_category_input_container input {
+        width: 95%;
+        height: 4rem;
+        border: none;
+        border-bottom: 1px solid gray; }
+        .backdrop_add_category_input_container input:focus, .backdrop_add_category_input_container input:hover {
+          outline: none; }
+      .backdrop_add_category_input_container button {
+        position: absolute;
+        top: .5rem;
+        right: calc(1rem + 2vw);
+        width: calc(3rem + 7vw);
+        height: 3rem;
+        background-color: #42C88D;
+        border: none;
+        border-radius: 8px;
+        color: white;
+        font-size: calc(.3rem + .8vw); }
+        .backdrop_add_category_input_container button:hover, .backdrop_add_category_input_container button:active {
+          background-color: #30a773;
+          cursor: pointer; }
 
 .open {
-  top: 0; }
+  top: 0;
+  opacity: 1; }
 
 .bg_fixed {
   position: absolute;
@@ -158,8 +200,8 @@ body {
       letter-spacing: 2px;
       font-weight: 600;
       color: gray;
-      width: 25rem;
-      height: 25rem;
+      width: 20rem;
+      height: 20rem;
       border-radius: 6px;
       overflow: hidden;
       box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.75);
