--- a/scss/_backdrop.scss
+++ b/scss/_backdrop.scss
@@ -1,23 +1,29 @@
 .backdrop {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: -100%;
     left: 0;
+    opacity: 0;
     background-color: get-color(backdrop);
     z-index: 10;
-    transition: top .5s cubic-bezier(0.755, 0.05, 0.855, 0.06); 
+    transition: all .5s cubic-bezier(0.755, 0.05, 0.855, 0.06); 
     @include flexbox(center, center, row);
 
     &_transparent {
-        width: 60%;
+        width: 70%;
         height: 20rem;
         color: white;
+        @include flexbox(center, flex-end, column);
 
         p {
-            font-size: get-font-size(medium);
+            font-size: get-font-size(small);
             @include flexbox(center, center, row);
             margin: 1rem;
+
+            &:hover, &:active {
+                cursor: pointer;
+            }
         }
         span {
             font-size: get-font-size(large);
@@ -32,9 +38,50 @@
         background-color: white;
         border-radius: 8px;
         box-shadow: 0px 0px 18px 0px get-color(shadow);
+        @include flexbox(flex-start, flex-start, column);
+
+        h2 {
+            font-size: get-font-size(medium);
+            font-weight: 600;
+            color: get-color(primary);
+            margin: 2rem 2rem;
+            text-transform: uppercase;
+        }
+        &_input_container {
+            width: 100%;
+            position: relative;
+            input {
+                width: 95%;
+                height: 4rem;
+                border: none;
+                border-bottom: 1px solid get-color(primary);
+
+                &:focus, &:hover {
+                    outline: none;
+                }
+            }
+            button {
+                position: absolute;
+                top: .5rem;
+                right: calc(1rem + 2vw);
+                width: calc(3rem + 7vw);
+                height: 3rem;
+                background-color: get-color(btn);
+                border: none;
+                border-radius: 8px;
+                color: white;
+                font-size: get-font-size(small);
+
+                &:hover, &:active {
+                    background-color: darken(get-color(btn), 10%);
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
 
 .open {
     top:0;
+    opacity: 1;
 }
